# app10

.pivota/: dev-script.meta.json  start-dev.sh
.planning/: PROJECT.md  ROADMAP.md  STATE.md
.planning/docs/: PERSONAS.md  PRD.md  ROADMAP.md
.planning/fragments/: phase-1-roadmap.yaml  phase-2-roadmap.yaml
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/models/: chat.py  document.py  errors.py  session.py
backend/app/routers/: chat.py  documents.py  sessions.py
backend/app/services/: chunker.py  embedder.py  ingestion.py  parser.py  vector_store.py
backend/app/utils/: file_validation.py
backend/tests/: conftest.py  test_chat.py  test_documents.py  test_ingestion.py  test_sessions.py
backend/tests/fixtures/: sample.docx  sample.txt
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
project_specs/: FRD-RAGChatbot.md  JOURNEYS-RAGChatbot.md  JTBD-RAGChatbot.md  PERSONAS-RAGChatbot.md  PRD-RAGChatbot.md  STORY-MAP-RAGChatbot.md  TechArch-RAGChatbot.md  UserStories-RAGChatbot.md
project_specs/FRD/: 00-header.md  F00-document-upload-ingestion.md  F01-rag-question-answering.md  F02-source-citations.md  F03-document-library-management.md  F04-session-chat-history.md  F05-premium-responsive-ui.md  F06-multi-document-retrieval.md  F07-answer-confidence-feedback.md  F08-export-copy-utilities.md  Y0-schema.md  Y1-api.md  Y2-errors.md  Y3-integrations.md
project_specs/TechArch/: 00-overview.md  01-components.md  (+5 more)
(+71 files in other folders)
